--- a/content/post/how-to-linear-plateau-R.Rmd
+++ b/content/post/how-to-linear-plateau-R.Rmd
@@ -11,6 +11,7 @@ tags:
 - soil correlation
 - crops
 - R
+image: "linear-plateau.png"
 editor_options: 
   chunk_output_type: console
 ---
@@ -195,6 +196,12 @@ lin_plateau(cotton) +
     "Relative yield and soil potassium for", nrow(cotton), "cotton trials"),
     y = "Relative yield (%)",
     x = "Concentration of Soil Potassium (ppm)")
+```
+
+
+```{r save, eval=FALSE}
+ggsave("static/linear-plateau.png",
+       dpi = 300, width = 7, height = 5)
 ```
 
 The critical soil concentration for potassium appears to be around 75 ppm, though the confidence interval is pretty wide. This is probably due to the lack of data points. The model summary shows that most of the error comes from the the *a* and *c* parameters, essentially the intercept and join-point. The psuedo-R^2^ is about 0.66, so not too bad. Still, the distribution of points has gaps in it, which limits the confidence of the correlation.
